--- a/dnode/CMakeLists.txt
+++ b/dnode/CMakeLists.txt
@@ -6,4 +6,4 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 add_executable(dnode ${SOURCES})
 
-target_link_libraries(dnode ${Boost_SYSTEM_LIBRARY} ${Boost_THREAD_LIBRARY} rt dl)
+target_link_libraries(dnode dutil ${Boost_SYSTEM_LIBRARY} ${Boost_THREAD_LIBRARY} rt dl)
