dnode: udpgw server, will use later for udp passthrough

--- a/dnode/CMakeLists.txt
+++ b/dnode/CMakeLists.txt
@@ -48,6 +48,7 @@ set(SOURCES
     flow/StreamPassConnector.c
     flow/PacketPassFifoQueue.c
     udpgw_client/UdpGwClient.c
+    udpgw/udpgw.c
     flowextra/PacketPassInactivityMonitor.c
     flowextra/KeepaliveIO.c
     socksclient/BSocksClient.c
