--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,7 @@ set (COMMON_HEADERS
     ${DTUN_INCLUDE_DIR}/DTun/SignalHandler.h
     ${DTUN_INCLUDE_DIR}/DTun/DProtocol.h
     ${DTUN_INCLUDE_DIR}/DTun/Types.h
+    ${DTUN_INCLUDE_DIR}/DTun/Utils.h
     ${DTUN_INCLUDE_DIR}/DTun/UDTSocket.h
     ${DTUN_INCLUDE_DIR}/DTun/UDTReactor.h
     ${DTUN_INCLUDE_DIR}/DTun/UDTAcceptor.h
