dutil as shared library
in order to have separate instance of lwip

--- a/dmaster/CMakeLists.txt
+++ b/dmaster/CMakeLists.txt
@@ -9,4 +9,4 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 add_executable(dmaster ${SOURCES} ${COMMON_HEADERS})
 
-target_link_libraries(dmaster dutil udt ${Boost_SYSTEM_LIBRARY} ${Boost_THREAD_LIBRARY} rt dl)
+target_link_libraries(dmaster dutil ${Boost_SYSTEM_LIBRARY} ${Boost_THREAD_LIBRARY} rt dl)
