port mapping: symm sessions...

--- a/dnode/config2.ini
+++ b/dnode/config2.ini
@@ -5,6 +5,10 @@ probeAddress = 127.0.0.1
 probePort = 2345
 
 [node]
+bestEffort = true
+numSymmPorts = 3650
+numFastPorts = 200
+decayTimeoutMs = 120000
 id = 2
 route.0.ip = 0.0.0.0
 route.0.mask = 0.0.0.0
